# decibel-sdks

./: .gitignore  AGENTS.md  BDD_SUMMARY.md  CONVO.md  FEATURE_AUDIT_REPORT.md  PLAN.md  SCRATCHPAD.md  codecov.yml
decibel-sdk-python/: .gitignore  README.md  pyproject.toml
decibel-sdk-python/decibel/: __init__.py  config.py  errors.py
decibel-sdk-python/decibel/bulk/: __init__.py  order_manager.py
decibel-sdk-python/decibel/client/: __init__.py  read.py  websocket.py  write.py
decibel-sdk-python/decibel/gas/: __init__.py  manager.py
decibel-sdk-python/decibel/models/: __init__.py  account.py  common.py  enums.py  market.py  order.py  vault.py
decibel-sdk-python/decibel/state/: __init__.py  order_tracker.py  position_manager.py  risk_monitor.py
decibel-sdk-python/decibel/transaction/: __init__.py  builder.py  signer.py
decibel-sdk-python/decibel/utils/: __init__.py  address.py  crypto.py  formatting.py  nonce.py  price.py
decibel-sdk-python/examples/: .env.example  01_market_monitor.py  02_account_dashboard.py  03_place_and_manage_orders.py  04_market_making_bot.py  05_risk_watchdog.py  README.md  integration_example.py
decibel-sdk-python/tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_utils.py
decibel-sdk-python/tests/bdd/features/: bulk_orders.feature  error_safety.feature  order_lifecycle.feature  position_state.feature  price_formatting.feature  reconnection.feature  risk_monitoring.feature
decibel-sdk-python/tests/unit/: __init__.py  test_errors.py
decibel-sdk-python/tests/unit/bulk/: __init__.py  test_bulk_order_manager.py
decibel-sdk-python/tests/unit/models/: __init__.py  test_account.py  test_enums.py  test_market.py  test_order.py  test_pagination.py  test_trade.py
decibel-sdk-python/tests/unit/state/: __init__.py  test_order_tracker.py  test_position_manager.py  test_risk_monitor.py
decibel-sdk-python/tests/unit/utils/: test_address.py  test_formatting.py  test_nonce.py
docs/: BDD_ALL_LANGUAGES_STATUS.md  BDD_COMPLETE_SUMMARY.md  BDD_FUNCTIONAL_UPDATE.md  BDD_IMPLEMENTATION.md  BDD_MULTI_LANGUAGE_IMPLEMENTATION.md  specification.md
features/: account-management.feature  analytics-and-leaderboard.feature  delegation-and-builder-fees.feature  error-handling.feature  market-data.feature  on-chain-view-functions.feature  order-management.feature  positions-and-tpsl.feature  sdk-configuration.feature  twap-orders.feature  utility-functions.feature  vaults.feature  websocket-subscriptions.feature
scripts/: run-bdd-tests.sh
sdk-go/: client.go  config.go  config_test.go  coverage.out  errors.go  errors_test.go  go.mod  go.sum  models_test.go  utils_test.go
sdk-kotlin/: build.gradle.kts  gradlew  (+1 more)
sdk-python/: pyproject.toml  ruff.toml
sdk-python/decibel_sdk/: __init__.py  config.py  errors.py
sdk-python/decibel_sdk/client/: __init__.py  read.py  write.py  ws.py
sdk-python/decibel_sdk/gas/: __init__.py  manager.py
sdk-python/decibel_sdk/models/: __init__.py  account.py  common.py  market.py  order.py  position.py  vault.py  ws.py
sdk-python/decibel_sdk/transaction/: __init__.py  builder.py
sdk-python/decibel_sdk/utils/: __init__.py  address.py  events.py  nonce.py  price.py  query.py
sdk-python/examples/: integration.py
sdk-python/tests/: conftest.py  test_config.py  test_errors.py  test_gas_manager.py  test_models.py  test_models_extended.py  test_read_client.py  test_transaction_builder.py  test_utils.py  test_write_client.py  test_ws_client.py
sdk-rust/: Cargo.toml
sdk-rust-v2/: Cargo.toml
sdk-rust-v2/examples/: 01_market_monitor.rs  02_account_dashboard.rs  03_place_and_manage_orders.rs  04_market_making_bot.rs  05_risk_watchdog.rs  README.md
sdk-rust-v2/src/: config.rs  error.rs  lib.rs
sdk-rust-v2/src/bulk/: mod.rs  order_manager.rs
sdk-rust-v2/src/models/: account.rs  common.rs  enums.rs  market.rs  mod.rs
sdk-rust-v2/src/state/: mod.rs  order_tracker.rs  position_manager.rs  risk.rs
sdk-rust-v2/src/utils/: address.rs  formatting.rs  mod.rs  nonce.rs
sdk-rust-v2/tests/: integration_models.rs
sdk-rust/examples/: integration.rs
sdk-rust/src/: config.rs  error.rs  lib.rs  utils.rs
sdk-rust/src/client/: mod.rs  read.rs  write.rs  ws.rs
sdk-rust/src/gas/: mod.rs
sdk-rust/src/models/: account.rs  common.rs  market.rs  mod.rs  order.rs  position.rs  vault.rs  ws.rs
sdk-rust/src/transaction/: builder.rs
sdk-rust/tests/: bdd_basic_test.rs  bdd_runner.rs  bdd_runner_simple.rs  config_test.rs  error_test.rs  gas_manager_test.rs  models_extended_test.rs  models_test.rs  read_client_test.rs  utils_test.rs  write_client_test.rs  ws_client_test.rs
sdk-rust/tests/bdd/: README.md  mod.rs  world.rs
sdk-rust/tests/bdd/steps/: account_steps.rs  config_steps.rs  market_data_steps.rs  mod.rs  order_steps.rs  position_steps.rs
(+77 files in other folders)
