[project]
name = "decibel-sdk"
version = "0.1.0"
description = "Python SDK for Decibel — on-chain perpetual futures on Aptos"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx[http2]>=0.27,<1.0",
    "websockets>=13.0,<15.0",
    "pynacl>=1.5,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.10",
    "coverage[toml]>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["decibel_sdk"]
