[package]
name = "decibel-sdk-v2"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "Decibel perpetual futures SDK — trading bot and AI agent first"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
parking_lot = "0.12"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[example]]
name = "01_market_monitor"

[[example]]
name = "02_account_dashboard"

[[example]]
name = "03_place_and_manage_orders"

[[example]]
name = "04_market_making_bot"

[[example]]
name = "05_risk_watchdog"
