[package]
name = "decibel-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Decibel, a fully on-chain perpetuals exchange on Aptos"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gregnazario/decibel-sdks"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
futures-util = "0.3"
rand = "0.8"
sha3 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
bcs = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = "1"
tracing-subscriber = "0.3"
cucumber = "0.21"
async-trait = "0.1"
dotenv = "0.15"

[[test]]
name = "bdd_runner"
harness = false

[[test]]
name = "bdd_runner_simple"
harness = false
